# rezolvat

./: AUTHORS  CMakeLists.txt
data/: com.github.matzipan.rezolvat.desktop
src/: Application.vala  CMakeLists.txt  Main.vala  config.vala.cmake
src/Widgets/: Headerbar.vala  Window.vala
